projects/vb6parse/snapshots/syntax/library/statements/randomize/randomize_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/runtime_state/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: RandomizeStatement
      children:
        - kind: RandomizeKeyword
          text: Randomize
        - kind: Whitespace
          text: "    "
    - kind: Newline
      text: "\n"
